# faststack-python-example

./: .pre-commit-config.yaml  README.md  pyproject.toml  tasks.py
app/: __init__.py  app.py  config.py  const.py  database.py  exceptions.py  log.py  router.py
app/items/: router.py  schemas.py  service.py
app/kit/: db.py  html.py  router.py  views.py
app/kit/layouts/: __init__.py  base.py
app/layouts/: __init__.py
app/models/: __init__.py  items.py
app/pages/: index.py  not_found.py
app/pages/items/: __init__.py  list.py  new.py  show.py
app/views/: base.html  index.html
app/views/items/: list.html
tests/: test_main.py  test_version.py
